为网页增加了响应式布局

--- a/PicBedApi/templates/index.html
+++ b/PicBedApi/templates/index.html
@@ -17,10 +17,10 @@
 			<div class="name">BEIKLIVE</div>
 			<div class="name"> </div>
 			<a href="#" class="myButton" onclick="uploadImg()">Upload</a>
+			<!-- <a href="#" class="myButton">building</a>
 			<a href="#" class="myButton">building</a>
 			<a href="#" class="myButton">building</a>
-			<a href="#" class="myButton">building</a>
-			<a href="#" class="myButton">building</a>
+			<a href="#" class="myButton">building</a> -->
 		</div>
 
 		<!-- 相册 -->
