--- a/PicBedApi/templates/index/index.css
+++ b/PicBedApi/templates/index/index.css
@@ -52,8 +52,10 @@ body{
 	border:1px solid #fffbfa; */
     display: grid;
     justify-items: center;
-    grid-template-columns: repeat(auto-fill, 190px);
-    grid-template-rows: repeat(auto-fill, 190px);
+    grid-template-columns: repeat(auto-fill, 200px);
+    grid-template-rows: repeat(auto-fill, 200px);
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
     overflow-y:scroll;
 }
 #ViewBox::-webkit-scrollbar {/*滚动条整体样式*/
@@ -85,8 +87,8 @@ body{
 
 
 .imgItem{
-    width: 160px;
-    height: 160px;
+    width: 190px;
+    height:190px;
     box-shadow:inset 0px 0px 9px -1px #ebebeb;
 	background-color:transparent;
 	border:1px solid #fffbfa;
@@ -104,9 +106,9 @@ body{
 	border:1px solid #5fbfff;
 }
 .imgItem img{
-    /* width: 100%; */
-    max-width: 160px;
-    max-height: 160px;
+    /* width: auto; */
+    max-width: 190px;
+    max-height: 190px;
     height: auto;
     
 }
@@ -115,7 +117,7 @@ body{
 .imgItem marquee{
     position: absolute;
     background-color: rgba(228, 228, 228, 0.158);
-    height: 25px;
+    height: 40px;
     bottom: -30%;
     transition: 0.2s;
     visibility: hidden;
@@ -131,23 +133,32 @@ body{
 
 .bigPic{
     position: absolute;
-    width: 1440px;
-    height:810px;
-    left: calc(50% - 720px);
-    top: calc(50% - 405px);
+    width: 100%;
+    height:100%;
+    left: 0;
+    top: 0;
     /* background: chartreuse; */
     z-index: 999;
-
     display: flex;
     flex-direction: column;
     justify-content:center;
     align-items:center;
 }
+.bigPic:after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    filter: blur(8px);
 
+    background: inherit;
+}
 
 .bigPic img{
-    max-width: 1440px;
-    max-height: 810px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .closeIcon{
@@ -162,4 +173,86 @@ body{
 .closeIcon img{
     width: 70px;
     height: 70px;
+}
+
+@media screen and ( max-width: 980px ) {
+    #FunBox{
+        position:absolute;
+        left: 0%;
+        top: 0;
+        width: 100%;
+        height: 120px;
+        z-index: 1;
+        box-shadow: 0px 0px 9px -1px #80808069;
+        background-color:transparent;
+        border:1px solid #727272;
+    
+        display: flex;
+        flex-direction: row;
+    
+    }
+    .name{
+        font-size:300%;
+        margin: auto;
+        
+        /* padding:13px 24px; */
+        text-align: center;
+        text-decoration:none;
+        font-weight: bold;
+        text-shadow:0px 1px 12px #cccccc;
+        
+    }
+    .myButton {
+        border-left:inset 1px rgb(255, 255, 255);
+        background-color:#aacce271;
+        border-radius: 10%;
+        display:inline-block;
+        cursor:pointer;
+        color:#ffffff2f;
+        font-size:200%;
+        /* padding:13px 24px; */
+        margin: auto;
+        text-align: center;
+        text-decoration:none;
+        text-shadow:0px 1px 1px #c2c2c2;
+    }
+    #ViewBox{
+        position: absolute;
+        top:150px;
+        /* background-color: #5fbfff; */
+        width: 100%;
+        height: calc(100% - 160px);
+        z-index: 1;
+        display: grid;
+        left: 0;
+        
+        justify-items: center;
+        grid-template-columns: repeat(auto-fill, 200px);
+        grid-template-rows: repeat(auto-fill, 200px);
+        grid-row-gap: 3%;
+        grid-column-gap: 3%;
+        /* overflow: hidden; */
+        overflow-y:auto;
+    }
+    .imgItem{
+        width: 190px;
+        height: 190px;
+        box-shadow:inset 0px 0px 9px -1px #ebebeb;
+        background-color:transparent;
+        border:1px solid #fffbfa;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items:center;
+        overflow: hidden;
+        transition: 0.2s;
+    }
+    .imgItem img{
+        /* width: 100%; */
+        max-width: 190px;
+        max-height: 190px;
+        height: auto;
+        
+    }
 }
