--- a/PicBedApi/templates/index.html
+++ b/PicBedApi/templates/index.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
 <html>
- 
-	<head>
-		<meta charset="UTF-8">
-		<title>beik图床</title>
-		<script src="https://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
-		
-    	<!-- 样式表 -->
-    	<link rel="stylesheet" href="{{ static_url('index/index.css') }}">
-		<link rel="stylesheet" href="{{ static_url('index/upload.css') }}">
-	</head>
- 
-	<body>
-		<!-- 功能区 -->
-		<div id="FunBox">
-			<div class="name">BEIKLIVE</div>
-			<div class="name"> </div>
-			<a href="#" class="myButton" onclick="uploadImg()">Upload</a>
-			<!-- <a href="#" class="myButton">building</a>
-			<a href="#" class="myButton">building</a>
-			<a href="#" class="myButton">building</a>
-			<a href="#" class="myButton">building</a> -->
-		</div>
 
-		<!-- 相册 -->
-		<div id="ViewBox" onscroll="srollformat()">
-			<!-- <div class="imgItem">
+<head>
+    <meta charset="UTF-8">
+    <title>beik图床</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="{{ static_url('cdn/jquery.min.js') }}"></script>
+    <!-- 新 Bootstrap5 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
+
+    <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
+    <!-- 样式表 -->
+    <link rel="stylesheet" href="{{ static_url('index/index.css') }}">
+    <link rel="stylesheet" href="{{ static_url('index/upload.css') }}">
+</head>
+
+<body>
+    <div class="container-fluid">
+        <!-- 功能区 -->
+        <nav class="navbar navbar-expand d-nav">
+            <!-- Brand/logo -->
+            <a class="navbar-brand" href="#">
+                <img src="http://beiklive.top:6364/redirect?type=random" alt="logo" style="width:40px;">
+                <span>beiklive图床</span>
+            </a>
+
+            <!-- Links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#"  onclick="uploadImg()">上传</a>
+                </li>
+                <li class="nav-item title-right">
+                    <a class="nav-link" href="#">登录</a>
+                </li>
+
+            </ul>
+        </nav>
+
+
+        <!-- 相册 -->
+        <div id="ViewBox" onscroll="srollformat()">
+            <!-- <div class="imgItem">
 				<img src="./index/img/1.jpg">
 				<marquee><span style="font-weight: bolder;font-size: 15px;color: white;">1.jpg</span></marquee>
 			</div> -->
-		</div>
+        </div>
 
 
 
-		<!-- 弹出层 -->
-		<div class="uploadbackground" id="uppp">
-			
-		</div>
+        <!-- 弹出层 -->
+        <div class="uploadbackground" id="uppp">
 
-	</body>
-	<script src="{{ static_url('index/index.js') }}"></script>
-	<script src="{{ static_url('index/upload.js') }}"></script>
+        </div>
+    </div>
+</body>
+<script src="{{ static_url('index/index.js') }}"></script>
+<script src="{{ static_url('index/upload.js') }}"></script>
+
 </html>
