--- a/PicBedApi/templates/index/index.css
+++ b/PicBedApi/templates/index/index.css
@@ -2,8 +2,14 @@
     font-family: MineCraft;
     src: url("./font/Conther-2.ttf");
 }
+:root{
+    --d-nav-height: 70px;
+    --d-padding-temp: 10px;
+    --small-item-size : 100px;
 
+}
 body{
+    /* min-width: 700px; */
     background-color: rgb(41, 41, 41);
     font-family:MineCraft;
     width: 100%;
@@ -12,46 +18,54 @@ body{
     overflow: hidden;
 }
 
-
-#FunBox{
-    position: fixed;
-    left: 0%;
-    top: 0%;
-    width: 200px;
-    height: 100%;
-    z-index: 1;
-    box-shadow:inset 0px 0px 9px -1px #ebebeb;
-	background-color:transparent;
-	border:1px solid #fffbfa;
-
-    display: flex;
-    flex-direction: column;
-
-}
-.name{
-    font-size:35px;
-    
-	padding:13px 24px;
+.d-nav{
+    height: var(--d-nav-height);
+    border-bottom: 1px solid #ebeef5;
+    align-items: center;
+    line-height: 50px;
     text-align: center;
-	text-decoration:none;
-    font-weight: bold;
-	text-shadow:0px 1px 12px #cccccc;
+    background-color: #00000000;
+    justify-content: center;
+}
+
+.navbar-brand img {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    margin-left: 10px;
+    vertical-align: middle;
+}
+.navbar-brand span{
+    font-size: 25px;
+    font-weight: 700;
+    vertical-align: middle;
+    color: #69afdd;
     
 }
+
+.title-right {
+    float: right;
+    justify-content: center;
+    text-align: center;
+    padding: 0 20px;
+}
+
+
+
+
+
+
+
 
 #ViewBox{
-    /* background-color: tomato; */
+    padding-right: 20px;
     position: absolute;
-    left: 300px;
-    top:2%;
-    width: calc(100% - 300px);
-    height: 100%;
+    top: calc(var(--d-nav-height) + var(--d-padding-temp));
+    width: 100%;
+    height: calc(100% - var(--d-nav-height) - var(--d-padding-temp));
     z-index: 1;
-    /* box-shadow:inset 0px 0px 9px -1px #ebebeb;
-	background-color:transparent;
-	border:1px solid #fffbfa; */
     display: grid;
-    justify-items: center;
+    justify-content: center;
     grid-template-columns: repeat(auto-fill, 200px);
     grid-template-rows: repeat(auto-fill, 200px);
     grid-row-gap: 20px;
@@ -63,27 +77,7 @@ body{
     height: 1px;
 }
 
-.myButton {
-    border-left:inset 5px rgb(255, 255, 255);
-	background-color:transparent;
 
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-size:20px;
-	padding:13px 24px;
-    text-align: center;
-	text-decoration:none;
-	text-shadow:0px 1px 1px #c2c2c2;
-}
-.myButton:hover {
-    background-color: rgba(150, 150, 150, 0.247);
-    text-shadow:0px 1px 15px  #fff8bb;
-}
-.myButton:active {
-	position:relative;
-	top:1px;
-}
 
 
 .imgItem{
@@ -117,7 +111,8 @@ body{
 .imgItem marquee{
     position: absolute;
     background-color: rgba(228, 228, 228, 0.158);
-    height: 40px;
+    /* height: 40px; */
+    line-height: 30px;
     bottom: -30%;
     transition: 0.2s;
     visibility: hidden;
@@ -175,84 +170,29 @@ body{
     height: 70px;
 }
 
-@media screen and ( max-width: 980px ) {
-    #FunBox{
-        position:absolute;
-        left: 0%;
-        top: 0;
-        width: 100%;
-        height: 120px;
-        z-index: 1;
-        box-shadow: 0px 0px 9px -1px #80808069;
-        background-color:transparent;
-        border:1px solid #727272;
-    
-        display: flex;
-        flex-direction: row;
-    
+@media screen and ( max-width: 700px ) {
+    .navbar-brand span{
+        font-size: 0px;
+        display: none;
     }
-    .name{
-        font-size:300%;
-        margin: auto;
-        
-        /* padding:13px 24px; */
-        text-align: center;
-        text-decoration:none;
-        font-weight: bold;
-        text-shadow:0px 1px 12px #cccccc;
-        
-    }
-    .myButton {
-        border-left:inset 1px rgb(255, 255, 255);
-        background-color:#aacce271;
-        border-radius: 10%;
-        display:inline-block;
-        cursor:pointer;
-        color:#ffffff2f;
-        font-size:200%;
-        /* padding:13px 24px; */
-        margin: auto;
-        text-align: center;
-        text-decoration:none;
-        text-shadow:0px 1px 1px #c2c2c2;
-    }
+
     #ViewBox{
-        position: absolute;
-        top:150px;
-        /* background-color: #5fbfff; */
-        width: 100%;
-        height: calc(100% - 160px);
-        z-index: 1;
-        display: grid;
-        left: 0;
-        
-        justify-items: center;
-        grid-template-columns: repeat(auto-fill, 200px);
-        grid-template-rows: repeat(auto-fill, 200px);
-        grid-row-gap: 3%;
-        grid-column-gap: 3%;
-        /* overflow: hidden; */
-        overflow-y:auto;
+        grid-column-gap: 10px;
+        grid-template-columns: repeat(3, var(--small-item-size));
+        grid-template-rows: repeat(3, var(--small-item-size));
+
     }
+
     .imgItem{
-        width: 190px;
-        height: 190px;
-        box-shadow:inset 0px 0px 9px -1px #ebebeb;
-        background-color:transparent;
-        border:1px solid #fffbfa;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        justify-content:center;
-        align-items:center;
-        overflow: hidden;
-        transition: 0.2s;
+        width: var(--small-item-size);
+        height:var(--small-item-size);
+
     }
     .imgItem img{
-        /* width: 100%; */
-        max-width: 190px;
-        max-height: 190px;
-        height: auto;
+        /* width: auto; */
+        max-width: var(--small-item-size);
+        max-height: var(--small-item-size);
+
         
     }
 }
