--- a/PicBedApi/templates/index/index.css
+++ b/PicBedApi/templates/index/index.css
@@ -11,7 +11,7 @@
 body{
     /* min-width: 700px; */
     background-color: rgb(41, 41, 41);
-    font-family:MineCraft;
+    /* font-family:MineCraft; */
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -50,11 +50,23 @@ body{
     padding: 0 20px;
 }
 
+.nav-link{
+    font-size: 20px;
+    font-weight: 700;
+    margin-left: 40px;
+}
 
 
+#mytips{
+    z-index: 9999;
+    width: 20%;
 
+    float: right;
+}
+.alert{
+    z-index: 9999;
 
-
+}
 
 
 #ViewBox{
@@ -127,7 +139,7 @@ body{
 }
 
 .bigPic{
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height:100%;
     left: 0;
