--- a/PicBedApi/templates/index/upload.css
+++ b/PicBedApi/templates/index/upload.css
@@ -135,7 +135,7 @@
     text-align: center;
     line-height: 300px;
     color: lightgrey;
-    z-index: 999;
+    /* z-index: 999; */
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(auto-fill, 170px);
@@ -209,4 +209,9 @@ meter::-webkit-meter-even-less-good-value {
 .submitbox a{
     position: relative;
 
+}
+
+*::-webkit-scrollbar {/*滚动条整体样式*/
+    width: 0px;     /*高宽分别对应横竖滚动条的尺寸*/
+    height: 1px;
 }
