修改部分逻辑，增加腾讯云cos支持
Signed-off-by: beiklive <1376896787@qq.com>

--- a/PicBedApi/templates/index.html
+++ b/PicBedApi/templates/index.html
@@ -22,11 +22,19 @@
         var RequestUrl = "";
         var ImgUrl = "";
         var thumbUrl = "";
-        
+        var useCos = "";
+        var Bucket = "";
+        var region = "";
         $.getJSON("{{ static_url('config.json') }}", function(data) {
             //data 代表读取到的json中的数据
             RequestInfo = data["url"];
             document.title = data["title"];
+            useCos = data["useCos"];
+            console.log("useCos :" + useCos);
+            if(useCos == "true"){
+                Bucket = data["Bucket"];
+                region = data["region"];
+            }
         });
         window.onload = function () {
             Init()
