增加图片删除功能， 修改加载逻辑
Signed-off-by: beiklive <1376896787@qq.com>

--- a/PicBedApi/templates/index/index.css
+++ b/PicBedApi/templates/index/index.css
@@ -119,7 +119,23 @@ body{
     
 }
 
+.imgItem i{
+    position: absolute;
+    color: #e95353;
+    /* line-height: 50px; */
+    text-shadow: inset 0px 0px 9px -1px #6cddff;
+    right: 5%;
+    top: -30%;
+    transition: 0.2s;
+    visibility: hidden;
+    z-index: 99999;
+}
 
+.imgItem:hover  i{
+    position: absolute;
+    top: 5%;
+    visibility:visible;
+}
 .imgItem marquee{
     position: absolute;
     background-color: rgba(228, 228, 228, 0.158);
@@ -213,3 +229,5 @@ body{
     }
 
 }
+
+
