fix #13 图片预览时，点击空白处可关闭 👻FIX BUG: 修复了无法上传的bug 🍭NEW FEATURE: 1. 图片预览时，点击空白处可关闭 2. 调整上传框内的item大小和布局

--- a/PicBedApi/templates/index/upload.css
+++ b/PicBedApi/templates/index/upload.css
@@ -215,3 +215,21 @@ meter::-webkit-meter-even-less-good-value {
     width: 0px;     /*高宽分别对应横竖滚动条的尺寸*/
     height: 1px;
 }
+
+@media screen and ( max-width: 700px ) {
+
+    .boximg{
+        width: var(--small-item-size);
+        height: var(--small-item-size);
+    }
+
+    .boximg img{
+        max-width: var(--small-item-size);
+        max-height: var(--small-item-size);
+    }
+
+    .dragbox{
+        grid-template-columns: repeat(auto-fill, var(--small-item-size));
+        grid-template-rows: repeat(auto-fill, var(--small-item-size));
+    }
+}
