--- a/PicBedApi/templates/index/index.css
+++ b/PicBedApi/templates/index/index.css
@@ -40,7 +40,7 @@ body{
     font-weight: 700;
     vertical-align: middle;
     color: #69afdd;
-    
+
 }
 
 .title-right {
@@ -161,7 +161,7 @@ body{
     left: 0;
     top: 0;
     /* background: chartreuse; */
-    z-index: 999;
+    z-index: 99;
     display: flex;
     flex-direction: column;
     justify-content:center;
@@ -182,6 +182,15 @@ body{
 .bigPic img{
     max-width: 100%;
     max-height: 100%;
+    z-index: 101;
+
+}
+
+.bigPic div{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
 }
 
 .closeIcon{
